--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.4em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -219,4 +219,9 @@ ul.comment {
 
 div.well {
   background-color: #f6f7f9;
+}
+
+.activity {
+  background-color: #fff;
+  height: 100vh;
 }
