--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<h1><%= t "books.index.title" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_tag books_path, method: :get do %>
@@ -10,7 +11,9 @@
 <hr>
 <div class="row">
   <ul>
-    <%= render @books %>
+    <% if @books.any? %>
+      <%= render @books %>
+    <% end %>
   </ul>
 </div>
 <%= will_paginate %>
