--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,3 +1,4 @@
+<h1><%= t "request.new.send" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for [current_user, @request] do |f| %>
