--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,15 @@
     <%= link_to t("layouts.header.title"), root_path ,id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("layouts.header.home"), root_path %></li>
         <% if logged_in? %>
           <% if current_user.is_admin? %>
+            <li><%= link_to t("layouts.header.home"), admin_root_path %></li>
             <li><%= link_to t("layouts.header.users"), admin_root_path %></li>
             <li><%= link_to t("books.index.title"), admin_books_path %></li>
             <li><%= link_to t("layouts.header.addbook"),
               new_admin_book_url %></li>
           <% else %>
+            <li><%= link_to t("layouts.header.home"), root_path %></li>
             <li><%= link_to t("books.index.title"), books_path %></li>
             <li><%= link_to t("layouts.header.users"), users_path %></li>
           <% end %>
@@ -19,14 +20,15 @@
               <%= t("layouts.header.account") %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("layouts.header.profile"), current_user %></li>
-              <li><%= link_to t("layouts.header.settings"),
-                edit_user_path(current_user) %></li>
-              <li class="divider"></li>
               <% if current_user.is_admin? %>
                 <li><%= link_to t("layouts.header.request"),
                   admin_requests_path %></li>
               <% else %>
+                <li><%= link_to t("layouts.header.profile"),
+                  current_user %></li>
+                <li><%= link_to t("layouts.header.settings"),
+                edit_user_path(current_user) %></li>
+                <li class="divider"></li>
                 <li><%= link_to t("layouts.header.history"),
                   user_marks_path(current_user, mark: "read") %></li>
                 <li><%= link_to t("layouts.header.favorite"),
