--- a/app/views/shared/_like.html.erb
+++ b/app/views/shared/_like.html.erb
@@ -1,2 +1,2 @@
-<%= link_to t("activities.like"), [activity, @like], method: :post,
+<%= link_to t("activities.like"), [activity, like], method: :post,
   remote: true %>
