--- a/app/views/shared/_unlike.html.erb
+++ b/app/views/shared/_unlike.html.erb
@@ -1,2 +1,2 @@
-<%= link_to t("activities.unlike"), [activity, @like], method: :DELETE,
+<%= link_to t("activities.unlike"), [activity, like], method: :DELETE,
   remote: true %>
