--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td class="col-md-2"><%= book.title %></td>
+        <td class="col-md-2"><%= link_to book.title, book %></td>
         <td><%= @categories.find(book.category_id).name %></td>
         <td><%= book.author %></td>
         <td class="col-md-2"><%= l book.publish_date, format: :short %></td>
