--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,10 +1,12 @@
 <div class="col-sm-3 col-lg-4 col-md-3">
   <div class="thumbnail book">
-    <div class="col-md-4">
-      <%= link_to image_tag(book.picture.url, size: Settings.size_book), book %>
+    <div class="col-md-6">
+      <%= link_to image_tag(book.picture.url, size: Settings.size_index_book),
+        book %>
     </div>
     <div class="ellipsis">
-      <h4><b><%= link_to book.title, book %></b></h4>
+      <h4><b><%= link_to truncate(book.title, length: Settings.length_title),
+        book %></b></h4>
       <p><%= t "books.new.author" %> : <%= book.author %></p>
       <p><%= book.reviews.count %> <%= t "reviews.title" %></p>
       <p>
@@ -16,6 +18,6 @@
           <span class="glyphicon glyphicon-star-empty"></span>
         <% end %>
       </p>
-   </div>
+    </div>
   </div>
 </div>
