--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,24 @@
 <h1><%= t "books.index.title" %></h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_tag books_path, method: :get do %>
-      <%= text_field_tag :search, params[:search],
-        placeholder: t("searches.title"), class: "form-control", value: nil %>
-      <%= submit_tag t("searches.search"), class: "btn btn-primary" %>
+  <div class="col-md-9 col-md-offset-2">
+    <%= form_tag books_path, class: "navbar-form", method: :get do %>
+      <%= select_tag :type, options_for_select(@types), class: "form-control" %>
+      <div class="input-group">
+        <%= search_field_tag :search, params[:search],
+          placeholder: t("searches.title"), class: "form-control search" %>
+        <div class="input-group-btn">
+          <%= submit_tag t("searches.search"), name: nil,
+            class: "btn btn-primary" %>
+        </div>
+      </div>
     <% end %>
   </div>
-</div>
-<hr>
 <div class="row">
+  <aside class="col-md-12">
   <ul>
     <% if @books.any? %>
       <%= render @books %>
     <% end %>
   </ul>
+  </aside>
 </div>
 <%= will_paginate %>
