--- a/app/views/marks/update.js.erb
+++ b/app/views/marks/update.js.erb
@@ -2,3 +2,4 @@ $("#mark_favorite").html("<%= j render current_user.favorite?(params[:book_id]) 
   'books/rmfavorite' : 'books/favorite' %>");
 $("#mark_read").html("<%= j render current_user.was_read?(params[:book_id]) ?
   'books/wasread' : 'books/markread' %>");
+$("#favorite_num").html("<%= j render 'books/favorite_num' %>");
