--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     <section class="stats">
       <%= render "shared/stats" %>
     </section>
-    <%= render "follow_form" if logged_in? && !current_user.is_admin? %>
+    <%= render "follow_form" unless current_user.is_admin? %>
   </aside>
   <aside class="col-md-5 activity">
     <h3><%= t "activities.title" %></h3>
